--- a/src/pages/community/patterns/generate-an-api-key/index.mdx
+++ b/src/pages/community/patterns/generate-an-api-key/index.mdx
@@ -5,7 +5,7 @@ description: When designing for the generation of API keys, ensure users know wh
 
 #### Maintainer:
 
-[Vikki Paterson](https://github.com/vikkipaterson)
+[Vikki Paterson](https://github.com/vikkipaterson), [Chloe Poulter](https://github.com/chloepoulterdesign)
 
 <PageDescription>
 
@@ -14,6 +14,8 @@ When designing for the generation of API keys, ensure users know what the key is
 </PageDescription>
 
 ![Example of an API key being generated](images/1.png)
+
+The reusable code component can be found in [this React storybook](https://pages.github.ibm.com/cloud-integration-design/ide-components/?path=/story/production-ready-ide-api-key-generation-component--with-core-configuration).
 
 ## General access keys
 
@@ -24,7 +26,7 @@ Users click a primary **Generate** button. Consider displaying a **Generating...
 <Row>
 <Column colLg={8}>
 
-![Example of a generate button.](images/2.png)
+![Example of a generate button](images/2.png)
 
 </Column>
 </Row>
@@ -95,7 +97,38 @@ A user may want to limit the access an application or service is granted. Restri
 <Row>
 <Column colLg={8}>
 
+![Many components can be implemented in the modal content space.](images/9.png)
+
+<Caption>
+  Many components can be implemented in the modal content space.
+</Caption>
+
+</Column>
+</Row>
+
+<Row>
+<Column colLg={8}>
+
 ![Example of a restricted API key generation](images/8.png)
+
+<Caption> Some examples of restricted API key generation</Caption>
+
+</Column>
+</Row>
+
+## Show the API key in context (optional)
+
+In some use-cases, it can be helpful to also show the user the API key in context, after the modal is closed. In this situation, the key should be displayed near the "Generate" button.  
+The user may also need the option to generate a new API key.
+
+<Row>
+<Column colLg={8}>
+
+![One way to display an API key in context, after the modal is closed.](images/10.png)
+
+<Caption>
+  One way to display an API key in context, after the modal is closed.
+</Caption>
 
 </Column>
 </Row>
