--- a/src/pages/components/button/style.mdx
+++ b/src/pages/components/button/style.mdx
@@ -153,7 +153,7 @@ A button cannot have any element or text within 16 pixels / 1 rem of its borders
 <Row>
 <Column colLg={8}>
 
-![Structure of buttons](images/button-style-structure.png)
+![General button structure](images/button-style-structure.png)
 
 </Column>
 </Row>
