updates-to-community-import-pattern

--- a/src/pages/community/patterns/import-pattern/index.mdx
+++ b/src/pages/community/patterns/import-pattern/index.mdx
@@ -5,13 +5,15 @@ description: The import action transfers data or objects from an external source
 
 #### Maintainers:
 
-[Vikki Paterson](https://github.com/vikkipaterson)
+[Vikki Paterson](https://github.com/vikkipaterson), [Chloe Poulter](https://github.com/chloepoulterdesign)
 
 <PageDescription>
 
 The import action transfers data or objects from an external source into a system.
 
 </PageDescription>
+
+The import pattern uses [Carbon's File uploader Drag & Drop component](https://www.carbondesignsystem.com/components/file-uploader/usage/).
 
 ![Example of an import modal](/images/0.png)
 
@@ -146,3 +148,7 @@ If your product supports importing from a URL, use this method.
 
 </Column>
 </Row>
+
+## Future considerations
+
+We understand that some content in this pattern duplicates Carbon's File uploader component.
