Added disabled state tokens

--- a/src/pages/components/text-input/style.mdx
+++ b/src/pages/components/text-input/style.mdx
@@ -37,6 +37,8 @@ Inputs come in two different colors. The default input color is `$field-01` and 
 | `.bx--text-input--invalid` | outline    | `$support-01` |
 | `.bx--form-requirement`    | text color | `$support-01` |
 | `.warning--filled`         | svg        | `$support-01` |
+| `.bx--text-input:disabled` | background | `$disabled-01`|
+| `.bx--text-input:disabled` | text color | `$disabled-02`|
 
 ## Typography
 
