docs(checkbox): bug updates

--- a/src/pages/components/checkbox/style.mdx
+++ b/src/pages/components/checkbox/style.mdx
@@ -15,6 +15,14 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
 | `.bx--checkbox:checked`   | background-color | `$ui-05`      |
 | `.bx--checkbox:checked`   | checkmark        | `$inverse-01` |
 
+<Row>
+<Column colLg={8}>
+
+![Checkbox states](images/checkbox-style-1.png)
+
+</Column>
+</Row>
+
 ### Interactive states
 
 | State       | Property   | Color token    |
@@ -23,13 +31,13 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
 | `:disabled` | text color | `$disabled-02` |
 | `:disabled` | border     | `$disabled-02` |
 
-<div className="image--fixed">
+<Row>
+<Column colLg={8}>
 
-![Disabled and normal checkbox states](images/checkbox-style-1.png)
+![Checkbox interactive states](images/checkbox-style-2.png)
 
-</div>
-
-<Caption>Disabled and normal checkbox states</Caption>
+</Column>
+</Row>
 
 ## Typography
 
@@ -46,6 +54,7 @@ Checkbox headings and labels should be sentence case, with only the first word i
 | ------------------------------------- | -------------- | -------- | ------------- |
 | `.bx--checkbox`                       | height & width | 16px     | –             |
 | `.bx--checkbox`                       | border         | 1px      | –             |
+| `.bx--checkbox:focus`                 | border         | 2px      | –             |
 | `.bx--label`                          | margin-bottom  | 8 / 0.5  | `$spacing-03` |
 | `.bx--checkbox-label`                 | padding-left   | 8 / 0.5  | `$spacing-03` |
 | `.bx--form-item.bx--checkbox-wrapper` | margin-bottom  | 8 / 0.5  | `$spacing-03` |
