Tweaked spacing and added caption

--- a/src/pages/community/patterns/generate-an-api-key/index.mdx
+++ b/src/pages/community/patterns/generate-an-api-key/index.mdx
@@ -15,6 +15,10 @@ When designing for the generation of API keys, ensure users know what the key is
 
 ![Example of an API key being generated](images/1.png)
 
+<Caption>
+  An example of API key generation with restricted access options
+</Caption>
+
 Note: The reusable code component can be found in [this React storybook](https://pages.github.ibm.com/cloud-integration-design/ide-components/?path=/story/production-ready-ide-api-key-generation-component--with-core-configuration).
 
 ## General access keys
@@ -118,7 +122,8 @@ A user may want to limit the access an application or service is granted. Restri
 
 ## Show the API key in context (optional)
 
-In some use cases, it can be helpful to also show the user the API key in context, after the modal is closed. In this situation, the key should be displayed near the "Generate" button.  
+In some use cases, it can be helpful to also show the user the API key in context, after the modal is closed. In this situation, the key should be displayed near the "Generate" button.
+
 The user may also need the option to generate a new API key.
 
 <Row>
