added-anchor-links-and-notification-component

--- a/src/pages/community/patterns/generate-an-api-key/index.mdx
+++ b/src/pages/community/patterns/generate-an-api-key/index.mdx
@@ -13,13 +13,24 @@ When designing for the generation of API keys, ensure users know what the key is
 
 </PageDescription>
 
+<InlineNotification>
+
+The reusable code component can be found in [this React
+storybook](https://pages.github.ibm.com/cloud-integration-design/ide-components/?path=/story/production-ready-ide-api-key-generation-component--with-core-configuration).
+
+</InlineNotification>
+
+<AnchorLinks>
+  <AnchorLink>General access keys</AnchorLink>
+  <AnchorLink>Restricted access keys</AnchorLink>
+  <AnchorLink>Show the API key in context (optional)</AnchorLink>
+</AnchorLinks>{" "}
+
 ![Example of an API key being generated](images/1.png)
 
 <Caption>
   An example of API key generation with restricted access options
 </Caption>
-
-Note: The reusable code component can be found in [this React storybook](https://pages.github.ibm.com/cloud-integration-design/ide-components/?path=/story/production-ready-ide-api-key-generation-component--with-core-configuration).
 
 ## General access keys
 
