feat: add sequential color palette initial

--- a/src/pages/data-visualization/color-palettes/index.mdx
+++ b/src/pages/data-visualization/color-palettes/index.mdx
@@ -24,6 +24,10 @@ The color palette for data visualizations is a select subset of the IBM Design L
 
 </AnchorLinks>
 
+<ColorPalette type="categorical" />
+
+<ColorPalette type="sequential" />
+
 ## Resources
 
 <Row className="resource-card-group">
