Updates to (community) Generate an API key pattern (#1364)
* Updated-community-API-key-pattern

* Apply suggestions from code review

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Tweaked spacing and added caption

* added-anchor-links-and-notification-component

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/src/pages/community/patterns/generate-an-api-key/index.mdx
+++ b/src/pages/community/patterns/generate-an-api-key/index.mdx
@@ -3,9 +3,9 @@ title: Generate an API key
 description: When designing for the generation of API keys, ensure users know what the key is created for, the security implications, and the end destination of the key.
 ---
 
-#### Maintainer:
+#### Maintainers:
 
-[Vikki Paterson](https://github.com/vikkipaterson)
+[Vikki Paterson](https://github.com/vikkipaterson), [Chloe Poulter](https://github.com/chloepoulterdesign)
 
 <PageDescription>
 
@@ -13,7 +13,24 @@ When designing for the generation of API keys, ensure users know what the key is
 
 </PageDescription>
 
+<InlineNotification>
+
+The reusable code component can be found in [this React
+storybook](https://pages.github.ibm.com/cloud-integration-design/ide-components/?path=/story/production-ready-ide-api-key-generation-component--with-core-configuration).
+
+</InlineNotification>
+
+<AnchorLinks>
+  <AnchorLink>General access keys</AnchorLink>
+  <AnchorLink>Restricted access keys</AnchorLink>
+  <AnchorLink>Show the API key in context (optional)</AnchorLink>
+</AnchorLinks>{" "}
+
 ![Example of an API key being generated](images/1.png)
+
+<Caption>
+  An example of API key generation with restricted access options
+</Caption>
 
 ## General access keys
 
@@ -24,7 +41,7 @@ Users click a primary **Generate** button. Consider displaying a **Generating...
 <Row>
 <Column colLg={8}>
 
-![Example of a generate button.](images/2.png)
+![Example of a generate button](images/2.png)
 
 </Column>
 </Row>
@@ -95,7 +112,39 @@ A user may want to limit the access an application or service is granted. Restri
 <Row>
 <Column colLg={8}>
 
+![Many components can be implemented in the modal content space.](images/9.png)
+
+<Caption>
+  Many components can be implemented in the modal content space.
+</Caption>
+
+</Column>
+</Row>
+
+<Row>
+<Column colLg={8}>
+
 ![Example of a restricted API key generation](images/8.png)
+
+<Caption> Some examples of restricted API key generation</Caption>
+
+</Column>
+</Row>
+
+## Show the API key in context (optional)
+
+In some use cases, it can be helpful to also show the user the API key in context, after the modal is closed. In this situation, the key should be displayed near the "Generate" button.
+
+The user may also need the option to generate a new API key.
+
+<Row>
+<Column colLg={8}>
+
+![One way to display an API key in context, after the modal is closed.](images/10.png)
+
+<Caption>
+  One way to display an API key in context, after the modal is closed.
+</Caption>
 
 </Column>
 </Row>
