--- a/src/pages/tutorial/react/step-2.mdx
+++ b/src/pages/tutorial/react/step-2.mdx
@@ -374,7 +374,7 @@ The third row will be created in a later tutorial, so we'll just add the headers
 
 ## Style landing page
 
-We've added basic layout styles in `_landing-page.scss`, so now let's add type, color and spacing styles to match the design. We'll be using our [spacing tokens](https://www.carbondesignsystem.com/guidelines/spacing/overview). In `app.scss`, add these imports at the **top** of the file so we can use Carbon breakpoints, tokens, and typography Sass mixins and functions:
+We've added basic layout styles in `_landing-page.scss`, so now let's add type, color, and spacing styles to match the design. We'll be using our [spacing tokens](https://www.carbondesignsystem.com/guidelines/spacing/overview). In `app.scss`, add these imports at the **top** of the file so we can use Carbon breakpoints, tokens, and typography Sass mixins and functions:
 
 ```scss path=src/app.scss
 @import "carbon-components/scss/globals/scss/vendor/@carbon/type/scss/font-family.scss";
