Apply suggestions from code review
Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

--- a/src/pages/community/patterns/import-pattern/index.mdx
+++ b/src/pages/community/patterns/import-pattern/index.mdx
@@ -13,7 +13,7 @@ The import action transfers data or objects from an external source into a syste
 
 </PageDescription>
 
-The import pattern uses [Carbon's File uploader Drag & Drop component](https://www.carbondesignsystem.com/components/file-uploader/usage/).
+This pattern uses Carbon's [File uploader](https://www.carbondesignsystem.com/components/file-uploader/usage/) (drag & drop) component.
 
 ![Example of an import modal](/images/0.png)
 
