Edit copy in Contribution seciton
related to issue : https://github.ibm.com/brand/bxd/issues/80?email_source=notifications&email_token=AAAW7RRPT3NEWSCH3R5BT3DR3SDIXA5CNFSM4AF5OUMKYY3PNVWWK3TUL52HS4DFWZEXG43VMVCXMZLOORHG65DJMZUWGYLUNFXW5KTDN5WW2ZLOORPWSZGOAWTJARY#event-94801991

--- a/src/pages/guidelines/pictograms/contribute.mdx
+++ b/src/pages/guidelines/pictograms/contribute.mdx
@@ -86,7 +86,7 @@ Don’t see the pictogram you need in the library? Make your own! Follow these g
 
 ## Contribution process
 
-Does your pictogram have potential for other materials at IBM? If so, please consider contributing to the design system. IBM welcomes pictogram contributions in the form of a pull request to our pictogram repository (coming soon). For now, to make a pull request, **[please submit an issue in the repo](https://github.ibm.com/brand/Pictograms/issues/new/choose)** with the pictogram attached.
+Does your pictogram have potential for other materials at IBM? If so, please consider contributing to the design system. IBM welcomes pictogram contributions in the form of a pull request to our pictogram repository. For now, to make a pull request, **[please submit an issue in the repo](https://github.ibm.com/brand/Pictograms/issues/new/choose)** with the pictogram attached.
 
 Please note that Carbon contribution is not required in order to introduce a new pictogram into your materials. If your pictogram is determined to be broadly useful in Carbon and passes IBM Brand design reviews, then it may also be integrated into the design system.
 
