Anchor Links and inline notification

--- a/src/pages/community/patterns/import-pattern/index.mdx
+++ b/src/pages/community/patterns/import-pattern/index.mdx
@@ -13,7 +13,17 @@ The import action transfers data or objects from an external source into a syste
 
 </PageDescription>
 
+<InlineNotification>
+
 This pattern uses Carbon's [File uploader](https://www.carbondesignsystem.com/components/file-uploader/usage/) (drag & drop) component.
+
+</InlineNotification>
+
+<AnchorLinks>
+  <AnchorLink>Choose a file (modal)</AnchorLink>
+  <AnchorLink>Choose a file (full page or side-panel)</AnchorLink>
+  <AnchorLink>Future considerations</AnchorLink>
+</AnchorLinks>
 
 ![Example of an import modal](/images/0.png)
 
