--- a/src/pages/guidelines/icons/contribute.mdx
+++ b/src/pages/guidelines/icons/contribute.mdx
@@ -86,9 +86,10 @@ Before submitting artwork, first review our [icons library](https://www.carbonde
 
 ### Approval process
 
-Icons for use within IBM must go through a design review process to ensure consistency and proper representation of the IBM brand across all environments. The process begins when you create a GitHub issue. Design review and approval typically take 14-21 days from issue creation, depending on the number of icons contributed.  
+Icons for use within IBM must go through a design review process to ensure consistency and proper representation of the IBM brand across all environments. The process begins when you create a GitHub issue. Design review and approval typically take 14—21 days from issue creation, depending on the number of icons contributed.  
 
 If your submission is accepted, the team will assign someone to your issue. If changes are needed, the team will note them in the issue and may return your submission with recommendations or suggest reworking the icon based on feedback from the Design System and Brand teams.  
+
 Once the submission is approved it will then go through our process to be included into the Adobe Illustrator IBM Icon master file and be made available in the IBM Design Language and Carbon libraries. 
 
 Submit icons for approval by creating a [single](https://github.ibm.com/brand/ui-icons/issues/new?assignees=&labels=&template=single-ui-icon-approval.md&title=%5Bui-icon%5D) or [batch](https://github.ibm.com/brand/ui-icons/issues/new?assignees=&labels=&template=batch-ui-icon-approval-request.md&title=%5Bui-icon-batch%5D) GitHub issue for your contribution. 
